--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,7 +4,7 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=Facelets
+auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=JSP
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -30,38 +30,21 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.antlr-2.7.7.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/antlr-2.7.7.jar
-file.reference.byte-buddy-1.10.2.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/byte-buddy-1.10.2.jar
-file.reference.cdi-api-2.0.SP1.jar=../../Ti/Java/lib/cdi-api-2.0.SP1.jar
-file.reference.classmate-1.5.1.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/classmate-1.5.1.jar
-file.reference.dom4j-2.1.1.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/dom4j-2.1.1.jar
-file.reference.FastInfoset-1.2.15.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/FastInfoset-1.2.15.jar
-file.reference.geolatte-geom-1.4.0.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/geolatte-geom-1.4.0.jar
-file.reference.hibernate-commons-annotations-5.1.0.Final.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/hibernate-commons-annotations-5.1.0.Final.jar
-file.reference.hibernate-core-5.4.10.Final.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/hibernate-core-5.4.10.Final.jar
-file.reference.hibernate-envers-5.4.10.Final.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/hibernate-envers-5.4.10.Final.jar
-file.reference.hibernate-jpamodelgen-5.4.10.Final.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/hibernate-jpamodelgen-5.4.10.Final.jar
-file.reference.hibernate-osgi-5.4.10.Final.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/hibernate-osgi-5.4.10.Final.jar
-file.reference.hibernate-spatial-5.4.10.Final.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/hibernate-spatial-5.4.10.Final.jar
-file.reference.istack-commons-runtime-3.0.7.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/istack-commons-runtime-3.0.7.jar
-file.reference.jandex-2.1.1.Final.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/jandex-2.1.1.Final.jar
-file.reference.javassist-3.24.0-GA.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/javassist-3.24.0-GA.jar
-file.reference.javax.activation-api-1.2.0.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/javax.activation-api-1.2.0.jar
-file.reference.javax.interceptor-api-1.2.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/javax.interceptor-api-1.2.jar
-file.reference.javax.persistence-api-2.2.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/javax.persistence-api-2.2.jar
-file.reference.jaxb-api-2.3.1.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/jaxb-api-2.3.1.jar
-file.reference.jaxb-runtime-2.3.1.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/jaxb-runtime-2.3.1.jar
-file.reference.jboss-logging-3.3.2.Final.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/jboss-logging-3.3.2.Final.jar
-file.reference.jboss-transaction-api_1.2_spec-1.1.1.Final.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/jboss-transaction-api_1.2_spec-1.1.1.Final.jar
-file.reference.jts-core-1.16.0.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/jts-core-1.16.0.jar
-file.reference.mysql-connector-java-8.0.21.jar=../../Ti/Java/lib/mysql-connector-java-8.0.21.jar
-file.reference.org.osgi.compendium-5.0.0.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/org.osgi.compendium-5.0.0.jar
-file.reference.org.osgi.core-6.0.0.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/org.osgi.core-6.0.0.jar
-file.reference.postgresql-42.2.2.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/postgresql-42.2.2.jar
+file.reference.antlr-2.7.7.jar=C:\\Users\\julianos\\Documents\\Ti\\Java\\lib\\hibernate-release-5.4.3.Final\\antlr-2.7.7.jar
+file.reference.byte-buddy-1.9.10.jar=C:\\Users\\julianos\\Documents\\Ti\\Java\\lib\\hibernate-release-5.4.3.Final\\byte-buddy-1.9.10.jar
+file.reference.classmate-1.3.4.jar=C:\\Users\\julianos\\Documents\\Ti\\Java\\lib\\hibernate-release-5.4.3.Final\\classmate-1.3.4.jar
+file.reference.dom4j-2.1.1.jar=C:\\Users\\julianos\\Documents\\Ti\\Java\\lib\\hibernate-release-5.4.3.Final\\dom4j-2.1.1.jar
+file.reference.FastInfoset-1.2.15.jar=C:\\Users\\julianos\\Documents\\Ti\\Java\\lib\\hibernate-release-5.4.10.Final\\FastInfoset-1.2.15.jar
+file.reference.hibernate-commons-annotations-5.1.0.Final.jar=C:\\Users\\julianos\\Documents\\Ti\\Java\\lib\\hibernate-release-5.4.3.Final\\hibernate-commons-annotations-5.1.0.Final.jar
+file.reference.hibernate-core-5.4.3.Final.jar=C:\\Users\\julianos\\Documents\\Ti\\Java\\lib\\hibernate-release-5.4.3.Final\\hibernate-core-5.4.3.Final.jar
+file.reference.javassist-3.24.0-GA.jar=C:\\Users\\julianos\\Documents\\Ti\\Java\\lib\\hibernate-release-5.4.3.Final\\javassist-3.24.0-GA.jar
+file.reference.javax.faces-2.4.0.jar=C:\\Users\\julianos\\Documents\\Ti\\Java\\lib\\javax.faces-2.4.0.jar
+file.reference.javax.persistence-api-2.2.jar=C:\\Users\\julianos\\Documents\\Ti\\Java\\lib\\hibernate-release-5.4.3.Final\\javax.persistence-api-2.2.jar
+file.reference.jboss-logging-3.3.2.Final.jar=C:\\Users\\julianos\\Documents\\Ti\\Java\\lib\\hibernate-release-5.4.3.Final\\jboss-logging-3.3.2.Final.jar
+file.reference.jboss-transaction-api_1.2_spec-1.1.1.Final.jar=C:\\Users\\julianos\\Documents\\Ti\\Java\\lib\\hibernate-release-5.4.3.Final\\jboss-transaction-api_1.2_spec-1.1.1.Final.jar
+file.reference.mysql-connector-java-8.0.21.jar=C:\\Users\\julianos\\Documents\\Ti\\Java\\lib\\mysql-connector-java-8.0.21.jar
 file.reference.primefaces-7.0.jar=C:\\Users\\julianos\\Documents\\Ti\\Java\\lib\\primefaces-7.0.jar
-file.reference.slf4j-api-1.6.1.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/slf4j-api-1.6.1.jar
-file.reference.stax-ex-1.8.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/stax-ex-1.8.jar
-file.reference.txw2-2.3.1.jar=../../Ti/Java/lib/hibernate-release-5.4.10.Final/txw2-2.3.1.jar
+file.reference.weld-servlet-shaded-3.1.1.Final.jar=C:\\Users\\julianos\\Documents\\Ti\\Java\\lib\\weld-servlet-shaded-3.1.1.Final.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -71,39 +54,21 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${libs.jsf20.classpath}:\
-    ${file.reference.FastInfoset-1.2.15.jar}:\
+    ${file.reference.mysql-connector-java-8.0.21.jar}:\
+    ${file.reference.primefaces-7.0.jar}:\
     ${file.reference.antlr-2.7.7.jar}:\
-    ${file.reference.byte-buddy-1.10.2.jar}:\
-    ${file.reference.classmate-1.5.1.jar}:\
+    ${file.reference.byte-buddy-1.9.10.jar}:\
+    ${file.reference.classmate-1.3.4.jar}:\
     ${file.reference.dom4j-2.1.1.jar}:\
-    ${file.reference.geolatte-geom-1.4.0.jar}:\
     ${file.reference.hibernate-commons-annotations-5.1.0.Final.jar}:\
-    ${file.reference.hibernate-core-5.4.10.Final.jar}:\
-    ${file.reference.hibernate-envers-5.4.10.Final.jar}:\
-    ${file.reference.hibernate-jpamodelgen-5.4.10.Final.jar}:\
-    ${file.reference.hibernate-osgi-5.4.10.Final.jar}:\
-    ${file.reference.hibernate-spatial-5.4.10.Final.jar}:\
-    ${file.reference.istack-commons-runtime-3.0.7.jar}:\
-    ${file.reference.jandex-2.1.1.Final.jar}:\
+    ${file.reference.hibernate-core-5.4.3.Final.jar}:\
     ${file.reference.javassist-3.24.0-GA.jar}:\
-    ${file.reference.javax.activation-api-1.2.0.jar}:\
-    ${file.reference.javax.interceptor-api-1.2.jar}:\
     ${file.reference.javax.persistence-api-2.2.jar}:\
-    ${file.reference.jaxb-api-2.3.1.jar}:\
-    ${file.reference.jaxb-runtime-2.3.1.jar}:\
     ${file.reference.jboss-logging-3.3.2.Final.jar}:\
     ${file.reference.jboss-transaction-api_1.2_spec-1.1.1.Final.jar}:\
-    ${file.reference.jts-core-1.16.0.jar}:\
-    ${file.reference.org.osgi.compendium-5.0.0.jar}:\
-    ${file.reference.org.osgi.core-6.0.0.jar}:\
-    ${file.reference.postgresql-42.2.2.jar}:\
-    ${file.reference.slf4j-api-1.6.1.jar}:\
-    ${file.reference.stax-ex-1.8.jar}:\
-    ${file.reference.txw2-2.3.1.jar}:\
-    ${file.reference.mysql-connector-java-8.0.21.jar}:\
-    ${file.reference.cdi-api-2.0.SP1.jar}:\
-    ${file.reference.primefaces-7.0.jar}
+    ${file.reference.javax.faces-2.4.0.jar}:\
+    ${file.reference.weld-servlet-shaded-3.1.1.Final.jar}:\
+    ${file.reference.FastInfoset-1.2.15.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
